[gd_scene load_steps=4 format=3 uid="uid://nv0j85y4k0f"]

[ext_resource type="Script" path="res://scripts/drive_timer.gd" id="1_vxr8r"]
[ext_resource type="AudioStream" uid="uid://dieqjr8pa47jd" path="res://sound/a-kitchen-timer-55420.mp3" id="2_rir11"]
[ext_resource type="AudioStream" uid="uid://4nc6f63gpysa" path="res://sound/failure-drum-sound-effect-2-7184.mp3" id="3_n7kf1"]

[node name="DriveTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxr8r")

[node name="Timer" type="Timer" parent="."]
wait_time = 600.0
one_shot = true

[node name="TimeRemaining" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 503.0
offset_bottom = 204.0
theme_override_font_sizes/normal_font_size = 45
text = "00:00:00"

[node name="audioTimer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rir11")

[node name="audioLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_n7kf1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
